; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_ldm.c_ZSTD_ldm_fillLdmHashTable.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_ldm.c_ZSTD_ldm_fillLdmHashTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32, i32*, i32*, i32*, i32, i32)* @ZSTD_ldm_fillLdmHashTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ZSTD_ldm_fillLdmHashTable(%struct.TYPE_7__* %0, i32 %1, i32* %2, i32* %3, i32* %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.TYPE_8__, align 4
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  store i32 %6, i32* %17, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  %18 = load i32, i32* %10, align 4
  store i32 %18, i32* %15, align 4
  %19 = load i32*, i32** %11, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 1
  store i32* %20, i32** %16, align 8
  br label %21

21:                                               ; preds = %25, %7
  %22 = load i32*, i32** %16, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = icmp ult i32* %22, %23
  br i1 %24, label %25, label %56

25:                                               ; preds = %21
  %26 = load i32, i32* %15, align 4
  %27 = load i32*, i32** %16, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 -1
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** %16, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = sub nsw i32 %32, 1
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %30, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @ZSTD_ldm_updateHash(i32 %26, i32 %29, i32 %36, i32 %39)
  store i32 %40, i32* %15, align 4
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %42 = load i32, i32* %15, align 4
  %43 = load i32, i32* %14, align 4
  %44 = load i32*, i32** %16, align 8
  %45 = load i32*, i32** %13, align 8
  %46 = ptrtoint i32* %44 to i64
  %47 = ptrtoint i32* %45 to i64
  %48 = sub i64 %46, %47
  %49 = sdiv exact i64 %48, 4
  %50 = trunc i64 %49 to i32
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @ZSTD_ldm_makeEntryAndInsertByTag(%struct.TYPE_7__* %41, i32 %42, i32 %43, i32 %50, i32 %52)
  %54 = load i32*, i32** %16, align 8
  %55 = getelementptr inbounds i32, i32* %54, i32 1
  store i32* %55, i32** %16, align 8
  br label %21

56:                                               ; preds = %21
  %57 = load i32, i32* %15, align 4
  ret i32 %57
}

declare dso_local i32 @ZSTD_ldm_updateHash(i32, i32, i32, i32) #1

declare dso_local i32 @ZSTD_ldm_makeEntryAndInsertByTag(%struct.TYPE_7__*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
